force-app/main/default/objects/SBQQ__ProductOption__c/fields/Dependent_On_c__c.field-meta.xml
<CustomField>
    <fullName>Dependent_On_c__c</fullName>
    <label>Dependent On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virtual Router</fullName>
            </value>
            <value>
                <fullName>Virtual Router - Usage Based</fullName>
            </value>
            <value>
                <fullName>Data Transfer IBW</fullName>
            </value>
            <value>
                <fullName>Burstable IBW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>