force-app/main/default/objects/SBQQ__ProductOption__c/fields/Disable_Quantity_Multiplication__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quantity_Multiplication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable quantity multiplication of component quantity</description>
    <inlineHelpText>It will be applicable to both (MRC+OTC)</inlineHelpText>
    <label>Disable Quantity Multiplication</label>
    <type>Checkbox</type>
</CustomField>