force-app/main/default/objects/SBQQ__ProductOption__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <formula>SBQQ__Feature__r.Name</formula>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>