force-app/main/default/objects/SBQQ__ProductOption__c/fields/Information_Note_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Information_Note_Legacy__c</fullName>
    <formula>&quot;SBQQ__OptionalSKU__r.Information_Note__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Information Note (Legacy)</label>
    <type>Text</type>
</CustomField>