force-app/main/default/objects/SBQQ__ProductOption__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <formula>SBQQ__OptionalSKU__r.Model_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>