force-app/main/default/objects/SBQQ__ProductOption__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <formula>SBQQ__OptionalSKU__r.Multiplier__c</formula>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>