force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Option Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>