force-app/main/default/objects/SBQQ__ProductOption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Type__c</columns>
    <columns>SBQQ__MinQuantity__c</columns>
    <columns>SBQQ__MaxQuantity__c</columns>
    <columns>Model_Name__c</columns>
    <columns>SBQQ__Feature__c</columns>
    <columns>SBQQ__QuantityEditable__c</columns>
    <columns>SBQQ__Quantity__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>SBQQ__OptionalSKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__ConfiguredSKU__c</field>
        <operation>equals</operation>
        <value>Full Rack</value>
    </filters>
    <label>All</label>
</ListView>